[FEAT] Add daily, meal, food record, body mass index and calories function