@@ -2,6 +2,7 @@ package com.lanhcare.service.impls;
 
 import com.lanhcare.dto.meallog.MealFoodRequest;
 import com.lanhcare.dto.meallog.MealFoodResponse;
+import com.lanhcare.dto.meallog.MealLogRequest;
 import com.lanhcare.entity.FoodItem;
 import com.lanhcare.entity.MealFood;
 import com.lanhcare.entity.MealLog;
@@ -10,8 +11,8 @@ import com.lanhcare.exception.exps.MealFoodException;
 import com.lanhcare.exception.exps.MealLogException;
 import com.lanhcare.repository.FoodItemRepository;
 import com.lanhcare.repository.MealFoodRepository;
-import com.lanhcare.repository.MealLogRepository;
 import com.lanhcare.service.MealFoodService;
+import com.lanhcare.service.MealLogService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,15 +20,13 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class MealFoodServiceImpl implements MealFoodService {
-
     private final MealFoodRepository mealFoodRepository;
     private final FoodItemRepository foodItemRepository;
-    private final MealLogRepository mealLogRepository;
+    private final MealLogService mealLogService;
 
     @Override
     @Transactional
@@ -35,65 +34,56 @@ public class MealFoodServiceImpl implements MealFoodService {
         FoodItem foodItem = foodItemRepository.findById(request.getFoodItemId())
                 .orElseThrow(() -> new MealLogException("FoodItem không tồn tại"));
 
-        MealLog mealLog = mealLogRepository.findById(request.getMealId())
-                .orElseThrow(() -> new MealLogException("Meal Log không tồn tại"));
-
-        BigDecimal calculatedCalories = foodItem.getCalo()
-                .multiply(BigDecimal.valueOf(request.getQuantity()));
+        MealLog mealLog = mealLogService.getById(request.getMealId());
 
         MealFood mealFood = MealFood.builder()
                 .foodItem(foodItem)
                 .quantity(request.getQuantity())
-                .calories(calculatedCalories)
+                .calories(BigDecimal.ZERO)
                 .mealLog(mealLog)
                 .build();
+        mealFood.calculateCalories();
 
-        mealFood.getMealLog().setTotalCalories(
-                mealLog.getTotalCalories().add(mealFood.getCalories())
-        );
+        MealFood saved = mealFoodRepository.save(mealFood);
+        mealLogService.update(saved.getMealLog().getId(), MealLogRequest.builder().build());
 
-        return mealFoodRepository.save(mealFood);
+        return saved;
     }
 
     @Override
     @Transactional
     public MealFood update(int id, MealFoodRequest request) {
-        MealFood existingMealFood = mealFoodRepository.findById(id)
-                .orElseThrow(() -> new MealFoodException("Không tìm thấy MealFood với ID: " + id));
-
-        existingMealFood.getMealLog().setTotalCalories(
-                existingMealFood.getMealLog().getTotalCalories().subtract(existingMealFood.getCalories())
-        );
+        MealFood existingMealFood = findById(id);
 
         // Food Item
-        if (request.getFoodItemId() != 0 && request.getFoodItemId() != existingMealFood.getFoodItem().getId()) {
+        if (request.getFoodItemId() != null
+                && request.getFoodItemId() != 0
+                && request.getFoodItemId() != existingMealFood.getFoodItem().getId()) {
             FoodItem newItem = foodItemRepository.findById(request.getFoodItemId())
                     .orElseThrow(() -> new FoodItemException("FoodItem mới không tồn tại"));
             existingMealFood.setFoodItem(newItem);
         }
 
         // Quantity
-        Optional.of(request.getQuantity()).ifPresent(existingMealFood::setQuantity);
+        Optional.ofNullable(request.getQuantity()).ifPresent(existingMealFood::setQuantity);
 
-        BigDecimal newCalories = existingMealFood.getFoodItem().getCalo()
-                .multiply(BigDecimal.valueOf(existingMealFood.getQuantity()));
-        existingMealFood.setCalories(newCalories);
-        existingMealFood.getMealLog().setTotalCalories(
-                existingMealFood.getMealLog().getTotalCalories().add(existingMealFood.getCalories())
-        );
+        existingMealFood.calculateCalories();
 
-        return mealFoodRepository.save(existingMealFood);
+        MealFood saved = mealFoodRepository.save(existingMealFood);
+        mealLogService.update(saved.getMealLog().getId(), MealLogRequest.builder().build());
+
+        return saved;
     }
 
     @Override
     @Transactional
     public void delete(int id) {
         MealFood mealFood = findById(id);
-        mealFood.getMealLog().setTotalCalories(
-                mealFood.getMealLog().getTotalCalories().subtract(mealFood.getCalories())
-        );
-        mealFoodRepository.save(mealFood);
-        mealFoodRepository.delete(mealFood);
+        MealLog mealLog = mealFood.getMealLog();
+        mealLog.getMealFoods().remove(mealFood);
+
+        mealFoodRepository.deleteById(id);
+        mealLogService.update(mealLog.getId(), MealLogRequest.builder().build());
     }
 
     @Override
@@ -106,7 +96,7 @@ public class MealFoodServiceImpl implements MealFoodService {
     public List<MealFoodResponse> getByMeal(int mealId) {
         return mealFoodRepository.findByMealLogId(mealId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -118,6 +108,7 @@ public class MealFoodServiceImpl implements MealFoodService {
                 .quantity(mealFood.getQuantity())
                 .calories(mealFood.getCalories())
                 .foodItemId(mealFood.getFoodItem() != null ? mealFood.getFoodItem().getId() : 0)
+                .foodItemName(mealFood.getFoodItem().getName())
                 .mealLogId(mealFood.getMealLog() != null ? mealFood.getMealLog().getId() : 0)
                 .build();
     }
